# django-migration-rollback

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
migration_rollback/: apps.py
migration_rollback/management/commands/: migrateprevious.py  migraterollback.py  rollback.py  rollback_local.py
migration_rollback/utils/: __init__.py  migration_utils.py
mysite/migration_rollback/management/commands/: rollback.py
mysite/migration_rollback/utils/: __init__.py  migration_utils.py
mysite/mysite/: settings.py
mysite/polls/: models.py
mysite/polls/migrations/: 0001_initial.py  0002_question1.py  0003_question2.py  0004_question3.py  0005_question4.py
tests/: conftest.py  settings.py  test_integration.py  test_migrateprevious.py  test_migraterollback.py  test_migration_utils.py
tests/testapp/: apps.py  models.py
tests/testapp/migrations/: 0001_initial.py  0002_author_bio.py
tests/testapp2/: apps.py  models.py
tests/testapp2/migrations/: 0001_initial.py  0002_book_summary.py
