[metadata]
name = django-migration-rollback
version = 0.1.2
description = A simple Django app to be able to migrate back to a previous migration or to migrate back to a migration in a specific branch in a git repository or locally.
description-file = README.md
url = https://github.com/jdboisvert/django-migration-rollback
author = Jeffrey Boisvert
author_email = info.jeffreyboisvert@gmail.com
license = LICENSE.md
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
packages = find:
